Fixed minor bug in css
Ratio slider was misaligned

--- a/website/css/main.css
+++ b/website/css/main.css
@@ -101,7 +101,7 @@ option {
     padding-left: 20px;
     padding-right: 20px;
     float: left;
-    left: -11px;
+    margin-right: 10px;
     -webkit-box-shadow: 0px 0px 5px 1px rgba(50, 50, 255, 0.6);
     -moz-box-shadow:    0px 0px 5px 1px rgba(50, 50, 255, 0.6);
     box-shadow:         0px 0px 5px 1px rgba(50, 50, 255, 0.6);
@@ -110,7 +110,7 @@ option {
     margin: 0px;
     padding: 0px;
     position: relative;
-    width: 57px;
+    width: 65px;
     float: left;
     text-align: right;
     padding-right: 39px;
