--- a/website/css/main380.css
+++ b/website/css/main380.css
@@ -97,11 +97,11 @@ option {
 }
 .slider {
     position: relative;
-    width: 180px;
+    width: 200px;
     padding-left: 20px;
     padding-right: 20px;
     float: left;
-    left: -11px;
+    margin-right: 20px;
     -webkit-box-shadow: 0px 0px 5px 1px rgba(50, 50, 255, 0.6);
     -moz-box-shadow:    0px 0px 5px 1px rgba(50, 50, 255, 0.6);
     box-shadow:         0px 0px 5px 1px rgba(50, 50, 255, 0.6);
